# ray-tracing

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
source/: main.cpp
source/rtr/: color.hpp  common.hpp  concepts.hpp  hit_record.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  progress.hpp  ray.hpp  ray_tracer.hpp  sphere.hpp  util.hpp  vec.hpp
test/: vec_test.cpp
